--- a/Lavoro/style.css
+++ b/Lavoro/style.css
@@ -61,12 +61,59 @@
     border-radius: 15px;
 }
 
-.ballimg{
-    border-radius: 70px;
+.img_contener{
+    display: flex;
+    gap: 10px;
+    width: 100%;
 }
-.Img{
-    padding: 70px;
+
+.img .img_contener .img1{
+    width: 50%;
+    padding: 10px;
+    border-radius: 15px;
+    object-fit: cover;
+    background-image: url(img/Stadio\ .jpg);
+    background-size: cover;
+    height: 20rem;
 }
-.stadio{
-    border-radius: 70px;
+
+.img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.img .img_contener .img2{
+    width: 50%;
+    padding: 10px;
+    border-radius: 15px;
+    object-fit: cover;
+    background-image: url(img/Palla.jpeg);
+    background-size: cover;
+    height: 20rem;
+}
+
+ .container_bottom_tex{
+    font-size: 25px;
+    width: 700px;
+    margin: 0 auto;
+    text-align: center;
+}
+ .container_bottom_tex h3{
+    font-family: "SUSE", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.section_bottom_text{
+
+}
+.bottom_text_2{
+    color:#7f7f7f;
+    line-height: 0px;
+}
+
+.bottom_text_1{
+    line-height: 0px;
 }
