--- a/Lavoro/style.css
+++ b/Lavoro/style.css
@@ -81,8 +81,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    margin: 3rem 0;
 }
 
 .img .img_contener .img2{
@@ -119,16 +118,43 @@
     line-height: 0px;
 }
 
+.footer .footer_text h5,
 .footer .footer_text2 a{
-text-decoration: none;
- color: #000000;
- font-family: "SUSE", sans-serif;
- margin: 5px;
+    text-decoration: none;
+    color: #000000;
+    font-family: "SUSE", sans-serif;
+    margin: 0   ;
 }
-.footer_text2{
+
+.footer .footer_text2{
     text-align: right;
-    padding: 15px 10px;
 }
 
+.footer .footer_container {
+    display: flex;
+}
 
+.footer .footer_container .footer_text,
+.footer .footer_container .footer_text2{
+    width: 50%;
+    padding: 15px;
+}
 
+.footer .footer_container .footer_text2 a{
+    padding: 0 10px;
+}
+
+.footer .footer_text svg{
+    width: 30px !important;
+    height: 30px !important;
+    position: relative;
+}
+
+.footer .footer_text {
+    display: flex;
+}
+
+.footer .footer_container .footer_text h5{
+    padding-top: 7px;
+    padding-left: 7px;
+}
